--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center grey">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
@@ -260,7 +260,6 @@
 					<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
-							<li><a href="www.annuaire-seo.com">annuaire-seo.com</a></li>
 							<li><a href="https://annuairedumarketing.fr">annuairedumarketing.fr</a></li>
 							<li><a href="https://www.site123.com/">site123.com</a></li>
 							<li><a href="https://wpannuaire.com/">wpannuaire.com</a></li>
