--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
-			<h2 class="col-sm-12 text-center">
+			<h2 class="mg-md text-center">
 				La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
 			</h2>
 		</div>
@@ -120,7 +120,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="Retour d'un client Mr Guibard PDG de la société A vos fourchettes" src="img/citation.png" />
+				<img alt="Retour d'un client Mr Guibard PDG de la société A vos fourchettes" src="img/citation.png" width="100%"/>
 
 			</div>
 		</div>
