--- a/index.html
+++ b/index.html
@@ -224,22 +224,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/?lang=fr"><span class="fa fa-twitter icon-md"></span><span class="accessibility">Twitter</span></a>
+							<a class="social" href="https://twitter.com/?lang=fr" aria-label="reseau social twitter"><span class="fa fa-twitter icon-md"></span><span class="accessibility">Twitter</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social"href="https://fr-fr.facebook.com/"><span class="fa fa-facebook icon-md"></span><span class="accessibility">Facebook</span></a>
+							<a class="social"href="https://fr-fr.facebook.com/" aria-label="reseau social facebook"><span class="fa fa-facebook icon-md"></span><span class="accessibility">Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span><span class="accessibility">Dribble</span></a>
+							<a class="social" href="https://dribbble.com/" aria-label="reseau social dribble"><span class="fa fa-dribbble icon-md"></span><span class="accessibility">Dribble</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span><span class="accessibility">Instagram</span></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="reseau social instagram"><span class="fa fa-instagram icon-md"></span><span class="accessibility">Instagram</span></a>
 						</div>
 					</div>
 
