--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="Retour d'un client Mr Guibard PDG de la société A vos fourchettes" src="img/citation.png" width="100%"/>
+				<img alt="Retour d'un client Mr Guibard PDG de la société A vos fourchettes" src="img/citation.png" class="citation" />
 
 			</div>
 		</div>
@@ -229,7 +229,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social"href="https://fr-fr.facebook.com/" aria-label="reseau social facebook"><span class="fa fa-facebook icon-md"></span><span class="accessibility">Facebook</span></a>
+							<a class="social" href="https://fr-fr.facebook.com/" aria-label="reseau social facebook"><span class="fa fa-facebook icon-md"></span><span class="accessibility">Facebook</span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
