correction accessibilité mobile

--- a/page2.html
+++ b/page2.html
@@ -86,14 +86,18 @@
 						<label for="name">Nom :</label>
 						<input id="name" class="form-control" required />
 					</div>
+				</br>
 					<div class="form-group">
 						<label for="email">Adresse email :</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
+				</br>
 					<div class="form-group">
 						<label for="connu">Comment nous avez-vous connu ?</label>
 						<input id="connu" class="form-control" type="email" required name="input_504" />
 					</div>
+				</br>
+					</form>
 					<div class="form-group">
 						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire) :<br></label>
 						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
