--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center grey">
-					La chouette agence - Agence web basée à Lyon.<br>
+					La chouette agence - <strong>'agence du design web basée à Lyon</strong>.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
