--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 				<div class="navbar-header">
 					<a class="navbar-brand focusedInputBlack" href="/"><img src="img/la-chouette-agence.png"
 							alt="titre de la chouette agence" /></a>
-					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"data-toggle="collapse" data-target=".navbar-1">
+					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
 				</div>
@@ -80,23 +80,22 @@
 			<div class="col-sm-6">
 				<form id="form_1">
 					<div class="form-group">
-						<label for="name">Nom :</label>
+						<label for="name">Nom</label>
 						<input id="name" class="form-control" required />
 					</div>
-				</br>
+				<br>
 					<div class="form-group">
-						<label for="email">Adresse email :</label>
+						<label for="email">Adresse email</label>
 						<input id="email" class="form-control" type="email" required />
 					</div>
-				</br>
+				<br>
 					<div class="form-group">
 						<label for="connu">Comment nous avez-vous connu ?</label>
 						<input id="connu" class="form-control" type="email" required name="input_504" />
 					</div>
-				</br>
-					</form>
+				<br>
 					<div class="form-group">
-						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire) :<br></label>
+						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
 						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
