--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./node_modules/jquery/dist/jquery.js" defer></script>
-	<script src="./node_modules/bootstrap/dist/js/bootstrap.js" defer></script>
+	<script src="./js/jquery.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
 	<script src="./js/blocs.js" defer></script>
-	<script src="./js/jqBootstrapValidation.js" defer></script>
-	<script src="./js/formHandler.js" defer></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js" defer></script>
     <title>Contactez La chouette agence pour donner une nouvelle vie à votre site internet</title>
 
     
