--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand focusedInputBlack" href="/"><img src="img/la-chouette-agence.png"
+					<a class="navbar-brand focusedInputBlack" href="/"><img src="img/la-chouette-agence_c.png"
 							alt="titre de la chouette agence" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -82,7 +82,7 @@
 				<form id="form_1">
 					<div class="form-group">
 						<label for="name">Nom</label>
-						<input id="name" class="form-control"  />
+						<input id="name" class="form-control" required />
 					</div>
 				<br>
 					<div class="form-group">
