--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand focusedInputBlack" href="index.html"><img src="img/la-chouette-agence.png" alt="logo la chouette agence - web design" /></a>
+					<a class="navbar-brand focusedInputBlack" href="index.html"><img src="img/la-chouette-agence_c.png" alt="logo la chouette agence - web design" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 						data-toggle="collapse" data-target=".navbar-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 							class="icon-bar"></span><span class="icon-bar"></span>
